--- a/doc/problema-facerecognition-modificacion.tex
+++ b/doc/problema-facerecognition-modificacion.tex
@@ -1,6 +1,7 @@
 El sistema debe ser entrenado haciendo uso de una base de datos de imágenes en la que cada imagen est\'a caracterizada por unos puntos de interés los cuales son analizados cada uno de ellos en este sistema. La modificación que se propone y es por esto que se plantea aquí, es la evolución de los puntos de interés a utilizar, ya que puede ser que algunos de ellos caractericen cada imagen de mejor manera que otros o que algunos quizás sirvan incluso para equivocar al clasificador.
 
 La configuracion de este problema en ECJ guarda mucha relación con el problema anterior \verapartado{desarrollo-maxone}, ya que los individuos también serán una cadena de 0s y 1s que indiquen si se utiliza o no el punto de interés, por lo que prácticamente lo único que cambia es la evaluación de individuos la cual es radicalmente m\'as compleja y costosa. La evaluación de cada individuo consistirá en ejecutar el sistema de reconocimiento facial solo con los puntos que el genotipo del individuo indique que se deban utilizar, el fitness corresponderá al porcentaje de imágenes correctamente clasificadas en la fase de consulta.
+//TODO: cuenta mejor porque y como se plantea el uso de un algoritmo genetico.
 
 SI tenemos en cuenta el tiempo que se tarda en la ejecución secuencial del algoritmo (3 minutos) y hacemos unas cuentas sencillas podemos ver que si tenemos una peque\~na población de 10 individuos, cada generación tardar\'a en ser evaluada una media hora, si queremos evolucionarlo necesitaremos quizás decenas o centenas de generaciones lo cual conllevar\'ia un tiempo impracticable. Es por esto que adem\'as de la integración con ECJ, haremos uso de la integración con Hadoop para distribuir y paralizar el proceso y así poder hacer que la evaluación de cada generación sea cuestión de pocos minutos. Los resultados obtenidos pueden ser consultados m\'as adelante en este documento \verapartado{resultados-facerecognition}.
 
