--- a/doc/bibliografia.bib
+++ b/doc/bibliografia.bib
@@ -7,6 +7,15 @@
 
 %% Saved with string encoding Unicode (UTF-8) 
 
+@incollection{bay2006surf,
+  title={Surf: Speeded up robust features},
+  author={Bay, Herbert and Tuytelaars, Tinne and Van Gool, Luc},
+  booktitle={Computer vision--ECCV 2006},
+  pages={404--417},
+  year={2006},
+  publisher={Springer}
+}
+
 @inproceedings{feki2009parallel,
   title={Parallel Genetic Algorithm Implementation for BOINC.},
   author={Feki, Malek Smaoui and Nguyen, Viet Huy and Garbey, Marc},
