--- a/doc/main.tex
+++ b/doc/main.tex
@@ -92,7 +92,9 @@
 \chapter{Trabajos futuros}
 
 \chapter{Conclusiones}
-Esta implementación multihilo, se ve limitada a la cantidad de núcleos de procesamiento de una solo m\'maquina, pero si utilizamos la integración con Had
+Esta implementación multihilo, se ve limitada a la cantidad de núcleos de procesamiento de una solo m\'maquina, pero si utilizamos la integración con Hadoop
+
+Aunque con las mejoras no tenia mucho sentido la integración por no mejorar a 8 hilos, tras las mejoras tiene sentido utilizarla cuando tenemos poblaciones grandes con individuos cuya evaluación no es costosa
 
 
 \chapter{Anexo I. C\'odigo fuente}
