--- a/doc/desarrollo-problema-parity.tex
+++ b/doc/desarrollo-problema-parity.tex
@@ -1,6 +1,6 @@
 En esta sección vamos a configurar un sencillo problema de programación genética conocido por la comunidad por el nombre de Parity, el objetivo de este problema de programación genética es encontrar un programa que produzca un valor de la paridad par booleana dadas n entradas booleanas independientes. Por lo general, se utilizan 6 entradas booleanas (Parity-6), y el objetivo es que coincida con el valor del bit de paridad para cada una de las entradas de 2 elevado a 6 = 64 posibles.
 
-Si queremos ejecutar este problema es ECJ debemos definir 3 cosas, implementar una clase que defina el problema y la cual pueda evaluar los individuos, definir otra clase que represente la paridad y ayuda a la transferencia de esta entre individuos de la población y por \'ultimo el fichero de par\'ametros de ECJ.
+Si queremos ejecutar este problema en ECJ debemos definir 3 cosas, una clase que represente el problema y la cual pueda evaluar los individuos, otra clase que represente la paridad y ayude a la transferencia de esta entre individuos de la población y por \'ultimo el fichero de par\'ametros de ECJ.
 
 Comentamos en primer lugar la implementación de la clase que representa la paridad, utilizada en este caso para transferir un 0 o un 1 dependiendo de la paridad calculada.
 
@@ -65,9 +65,9 @@ public class Parity extends GPProblem implements SimpleProblemForm {
 }
 \end{lstlisting}
 
-En esta implementación, en primer lugar se ejecuta el método setup el cual obtiene el parámetro del numero de bits a utilizar en el problema y posteriormente se calcula el valor de la combinación maxima con ese numero de bits. Respecto a la evaluación de los individuos en el método evaluate, en primer lugar se creo un objeto que representa el valor devuelto por el programa genético, posteriormente se recorren todos los valores posibles y por cada uno se calcula la paridad del valor y se ejecuta el genetico, si ambos coinciden en el valor devuelto se incrementa el contador (sum). Finalmente se establece el fitness del individuo en funci\'on del n\'umero de aciertos.
+En primer lugar en esta implementación se ejecuta el método setup el cual obtiene el parámetro del n\'umero de bits a utilizar en el problema y posteriormente se calcula lel n\'umero de combinaciones con ese n\'umero de bits. Respecto a la evaluación de los individuos en el método evaluate, en primer lugar se crea un objeto que representa el valor devuelto por la ejecuci'on del programa genético, posteriormente se recorren todos los valores posibles y por cada uno se calcula la paridad del valor y se ejecuta el programa gen\'etico, si ambos coinciden en el valor devuelto se incrementa el contador (sum). Finalmente se establece el fitness del individuo en funci\'on del n\'umero de aciertos.
 
-Tras definir las dos clases anteriores, lo único que queda es el fichero de parámetros, a el cual podemos nombrar parity.params y cuyo contenido puede ser el siguiente:
+Tras definir las dos clases anteriores, lo único que queda es el fichero de parámetros, el cual podemos nombrar parity.params y cuyo contenido puede ser el siguiente:
 
 \begin{lstlisting}[language=Java]
 # Heredamos parametros basicos desde otro fichero
@@ -96,9 +96,9 @@ eval.problem.bits = 12
 gp.fs.0.size = 16 # = eval.problem.bits + 4 para este problema
 \end{lstlisting}
 
-Con el objetivo de no repetir parámetros que suelen utilizarse con mucho frecuencia, heredamos desde un fichero de pararemos que contiene los m\'as usuales y sobreescribimos los que especifican el problema concreto, esto lo hacemos en la primera linea del fichero de parámetros con el parámetro parent y la ruta al fichero de parámetros que queremos heredar. A continuación se definen las funciones que pueden componer los programas genéticos producidos, indicamos el problema con las clases que hemos generado anteriormente y por ultimo definimos el numero de bits a utilizar en el problema.
+Con el objetivo de no repetir parámetros que suelen utilizarse con mucha frecuencia, heredamos desde un fichero de pararemos que contiene los m\'as usuales y sobreescribimos los que especifican el problema concreto, esto lo hacemos en la primera linea del fichero de parámetros con el parámetro parent y la ruta al fichero de parámetros que queremos heredar. A continuación se definen las funciones que pueden componer los programas genéticos producidos, indicamos el problema con las clases que hemos generado anteriormente y por \'ultimo definimos el n\'umero de bits a utilizar en el problema.
 
-Una vez definidos los ficheros necesarios, al igual que en el problema MaxOne podemos ejecutarlo si compilamos el código y ejecutamos el siguiente comando:
+Una vez definidos los ficheros necesarios, al igual que en el problema MaxOne, podemos ejecutarlo si compilamos el código y ejecutamos el siguiente comando:
 
 \mostrarconsola{
 	[usu@host src]\$ java ec.Evolve -file parity.params
