--- a/doc/desarrollo-resultados-introduccion.tex
+++ b/doc/desarrollo-resultados-introduccion.tex
@@ -1,1 +1,1 @@
-Analizamos ahora los resultados de la integración realizada, centrándonos en un problema que engloba las circunstancias de los dos problemas anteriores, donde el coste computacional de la evaluación de los individuos es despreciable por lo que la integración cobra sentido cuando la población es de un tamaño importante. Abordamos el problema de programación genética Parity, donde se evoluciona un programa hasta que consiga generar una función de paridad que retorne el bit de paridad correcto en todas las combinaciones posibles.
+Analizamos ahora los resultados de la integración realizada centrándonos en uno de los problemas anteriores, Parity. Este problema engloba las circunstancias de ambos ya que el coste computacional de la evaluación en estos problemas es despreciable. Analizamos los tiempos obtenidos en la ejecución de este problema de programación genética, donde se evoluciona un programa hasta que se consigue generar una función de paridad que retorne el bit de paridad correcto en todas las combinaciones posibles.
