--- a/doc/problema-facerecognition-modificacion.tex
+++ b/doc/problema-facerecognition-modificacion.tex
@@ -1,7 +1,10 @@
-El sistema debe ser entrenado haciendo uso de una base de datos de imágenes en la que cada imagen est\'a caracterizada por unos puntos de interés los cuales son analizados cada uno de ellos en este sistema. La modificación que se propone y es por esto que se plantea aquí, es la evolución de los puntos de interés a utilizar, ya que puede ser que algunos de ellos caractericen cada imagen de mejor manera que otros o que algunos quizás sirvan incluso para equivocar al clasificador.
+El sistema debe ser entrenado haciendo uso de una base de datos de imágenes en la que cada imagen est\'a caracterizada por unos puntos de interés. Todos estos puntos son analizados en la implementación descrita anteriormente. La modificación que se propone y es por esto que se plantea aquí, es la evolución de los puntos de interés a utilizar por el algoritmo, ya que puede ser que algunos de ellos caractericen las imagenes de mejor manera que otros o que algunos sirvan incluso para equivocar al sistema.
 
-La configuracion de este problema en ECJ guarda mucha relación con el problema anterior \verapartado{desarrollo-maxone}, ya que los individuos también serán una cadena de 0s y 1s que indiquen si se utiliza o no el punto de interés, por lo que prácticamente lo único que cambia es la evaluación de individuos la cual es radicalmente m\'as compleja y costosa. La evaluación de cada individuo consistirá en ejecutar el sistema de reconocimiento facial solo con los puntos que el genotipo del individuo indique que se deban utilizar, el fitness corresponderá al porcentaje de imágenes correctamente clasificadas en la fase de consulta.
-//TODO: cuenta mejor porque y como se plantea el uso de un algoritmo genetico.
+La configuraci\'on de este problema en ECJ guarda mucha relación con el problema de MaxOne \verapartado{desarrollo-maxone}, ya que los individuos también estar\'an representados por una cadena de 0s y 1s que indican en este caso si se utiliza o no el punto de interés, por lo que prácticamente lo único que cambia es la evaluación de individuos la cual es radicalmente m\'as compleja y costosa. De este modo, si nuestra base de datos asigna a cada imagen 10 puntos de inter\'es, el genotipo de nuestros individuos consistir\'a en una cadena de 0s y 1s de una longitud de 10 caracteres, indicando cada uno de ellos si el punto de inter\'es correspondiente a esa posición se utiliza (tendr\'a valor 1) o no (valor 0). Lo anteriormente explicado se expresa en un ejemplo en la imagen del rostro donde se seleccionan algunos puntos de interés \ver{facerecognition-face-evol}.
+
+\figuraSinMarco{0.8}{imagenes/facerecognition-face-evol}{Ejemplo de individuo de la poblaci\'on}{facerecognition-face-evol}{}
+
+La evaluación de cada individuo consistirá en ejecutar el sistema de reconocimiento facial solo con los puntos que el genotipo del individuo indique que se deban utilizar, el fitness corresponderá al porcentaje de imágenes correctamente clasificadas en la fase de consulta.
 
 SI tenemos en cuenta el tiempo que se tarda en la ejecución secuencial del algoritmo (3 minutos) y hacemos unas cuentas sencillas podemos ver que si tenemos una peque\~na población de 10 individuos, cada generación tardar\'a en ser evaluada una media hora, si queremos evolucionarlo necesitaremos quizás decenas o centenas de generaciones lo cual conllevar\'ia un tiempo impracticable. Es por esto que adem\'as de la integración con ECJ, haremos uso de la integración con Hadoop para distribuir y paralizar el proceso y así poder hacer que la evaluación de cada generación sea cuestión de pocos minutos. Los resultados obtenidos pueden ser consultados m\'as adelante en este documento \verapartado{resultados-facerecognition}.
 
